3º Curso (2021-2022)/1º Cuatrimestre/PAUTLEN/Compilador/src/alfa.output
Terminales no usados en la gramática

   TOK_ERROR


Gramática

    0 $accept: programa $end

    1 programa: TOK_MAIN '{' iniciar declaraciones dec_vars funciones wrt_main sentencias final '}'

    2 iniciar: %empty

    3 final: %empty

    4 dec_vars: %empty

    5 wrt_main: %empty

    6 declaraciones: declaracion
    7              | declaracion declaraciones

    8 declaracion: clase identificadores ';'

    9 clase: clase_escalar
   10      | clase_vector

   11 clase_escalar: tipo

   12 tipo: TOK_INT
   13     | TOK_BOOLEAN

   14 clase_vector: TOK_ARRAY tipo '[' TOK_CONSTANTE_ENTERA ']'

   15 identificadores: identificador_new
   16                | identificador_new ',' identificadores

   17 funciones: funcion funciones
   18          | %empty

   19 funcion: fn_declaration sentencias '}'

   20 fn_declaration: fn_name '(' parametros_funcion ')' '{' declaraciones_funcion

   21 fn_name: TOK_FUNCTION tipo identificador_use

   22 parametros_funcion: parametro_funcion resto_parametros_funcion
   23                   | %empty

   24 resto_parametros_funcion: ';' parametro_funcion resto_parametros_funcion
   25                         | %empty

   26 idpf: identificador_use

   27 parametro_funcion: tipo idpf

   28 declaraciones_funcion: declaraciones
   29                      | %empty

   30 sentencias: sentencia
   31           | sentencia sentencias

   32 sentencia: sentencia_simple ';'
   33          | bloque

   34 sentencia_simple: asignacion
   35                 | lectura
   36                 | escritura
   37                 | retorno_funcion

   38 bloque: condicional
   39       | bucle

   40 asignacion: identificador_use '=' exp
   41           | elemento_vector '=' exp

   42 elemento_vector: identificador_use '[' exp ']'

   43 condicional: if_sentencias
   44            | if_sentencias TOK_ELSE '{' sentencias '}'

   45 if_sentencias: if_exp sentencias '}'

   46 if_exp: TOK_IF '(' exp ')' '{'

   47 bucle: bucle_exp sentencias '}'

   48 bucle_exp: bucle_tok '(' exp ')' '{'

   49 bucle_tok: TOK_WHILE

   50 lectura: TOK_SCANF identificador_use

   51 escritura: TOK_PRINTF exp

   52 retorno_funcion: TOK_RETURN exp

   53 exp: exp '+' exp
   54    | exp '-' exp
   55    | exp '/' exp
   56    | exp '*' exp
   57    | '-' exp
   58    | exp TOK_AND exp
   59    | exp TOK_OR exp
   60    | '!' exp
   61    | identificador_use
   62    | constante
   63    | '(' exp ')'
   64    | '(' comparacion ')'
   65    | elemento_vector
   66    | llamada_funcion '(' lista_expresiones ')'

   67 llamada_funcion: identificador_use

   68 lista_expresiones: exp resto_lista_expresiones
   69                  | %empty

   70 resto_lista_expresiones: ',' exp resto_lista_expresiones
   71                        | %empty

   72 comparacion: exp TOK_IGUAL exp
   73            | exp TOK_DISTINTO exp
   74            | exp TOK_MENORIGUAL exp
   75            | exp TOK_MAYORIGUAL exp
   76            | exp '<' exp
   77            | exp '>' exp

   78 constante: constante_logica
   79          | constante_entera

   80 constante_logica: TOK_TRUE
   81                 | TOK_FALSE

   82 constante_entera: TOK_CONSTANTE_ENTERA

   83 identificador_use: TOK_IDENTIFICADOR

   84 identificador_new: TOK_IDENTIFICADOR


Terminales con las reglas donde aparecen

$end (0) 0
'!' (33) 60
'(' (40) 20 46 48 63 64 66
')' (41) 20 46 48 63 64 66
'*' (42) 56
'+' (43) 53
',' (44) 16 70
'-' (45) 54 57
'/' (47) 55
';' (59) 8 24 32
'<' (60) 76
'=' (61) 40 41
'>' (62) 77
'[' (91) 14 42
']' (93) 14 42
'{' (123) 1 20 44 46 48
'}' (125) 1 19 44 45 47
error (256)
TOK_MAIN (258) 1
TOK_INT (259) 12
TOK_BOOLEAN (260) 13
TOK_ARRAY (261) 14
TOK_FUNCTION (262) 21
TOK_IF (263) 46
TOK_ELSE (264) 44
TOK_WHILE (265) 49
TOK_SCANF (266) 50
TOK_PRINTF (267) 51
TOK_RETURN (268) 52
TOK_AND (269) 58
TOK_OR (270) 59
TOK_IGUAL (271) 72
TOK_DISTINTO (272) 73
TOK_MENORIGUAL (273) 74
TOK_MAYORIGUAL (274) 75
TOK_IDENTIFICADOR (275) 83 84
TOK_CONSTANTE_ENTERA (276) 14 82
TOK_TRUE (277) 80
TOK_FALSE (278) 81
TOK_ERROR (279)
NEG (280)


No terminales con las reglas donde aparecen

$accept (42)
    en la izquierda: 0
programa (43)
    en la izquierda: 1, en la derecha: 0
iniciar (44)
    en la izquierda: 2, en la derecha: 1
final (45)
    en la izquierda: 3, en la derecha: 1
dec_vars (46)
    en la izquierda: 4, en la derecha: 1
wrt_main (47)
    en la izquierda: 5, en la derecha: 1
declaraciones (48)
    en la izquierda: 6 7, en la derecha: 1 7 28
declaracion (49)
    en la izquierda: 8, en la derecha: 6 7
clase (50)
    en la izquierda: 9 10, en la derecha: 8
clase_escalar (51)
    en la izquierda: 11, en la derecha: 9
tipo (52)
    en la izquierda: 12 13, en la derecha: 11 14 21 27
clase_vector (53)
    en la izquierda: 14, en la derecha: 10
identificadores (54)
    en la izquierda: 15 16, en la derecha: 8 16
funciones (55)
    en la izquierda: 17 18, en la derecha: 1 17
funcion (56)
    en la izquierda: 19, en la derecha: 17
fn_declaration (57)
    en la izquierda: 20, en la derecha: 19
fn_name (58)
    en la izquierda: 21, en la derecha: 20
parametros_funcion (59)
    en la izquierda: 22 23, en la derecha: 20
resto_parametros_funcion (60)
    en la izquierda: 24 25, en la derecha: 22 24
idpf (61)
    en la izquierda: 26, en la derecha: 27
parametro_funcion (62)
    en la izquierda: 27, en la derecha: 22 24
declaraciones_funcion (63)
    en la izquierda: 28 29, en la derecha: 20
sentencias (64)
    en la izquierda: 30 31, en la derecha: 1 19 31 44 45 47
sentencia (65)
    en la izquierda: 32 33, en la derecha: 30 31
sentencia_simple (66)
    en la izquierda: 34 35 36 37, en la derecha: 32
bloque (67)
    en la izquierda: 38 39, en la derecha: 33
asignacion (68)
    en la izquierda: 40 41, en la derecha: 34
elemento_vector (69)
    en la izquierda: 42, en la derecha: 41 65
condicional (70)
    en la izquierda: 43 44, en la derecha: 38
if_sentencias (71)
    en la izquierda: 45, en la derecha: 43 44
if_exp (72)
    en la izquierda: 46, en la derecha: 45
bucle (73)
    en la izquierda: 47, en la derecha: 39
bucle_exp (74)
    en la izquierda: 48, en la derecha: 47
bucle_tok (75)
    en la izquierda: 49, en la derecha: 48
lectura (76)
    en la izquierda: 50, en la derecha: 35
escritura (77)
    en la izquierda: 51, en la derecha: 36
retorno_funcion (78)
    en la izquierda: 52, en la derecha: 37
exp (79)
    en la izquierda: 53 54 55 56 57 58 59 60 61 62 63 64 65 66, en la derecha:
    40 41 42 46 48 51 52 53 54 55 56 57 58 59 60 63 68 70 72 73 74
    75 76 77
llamada_funcion (80)
    en la izquierda: 67, en la derecha: 66
lista_expresiones (81)
    en la izquierda: 68 69, en la derecha: 66
resto_lista_expresiones (82)
    en la izquierda: 70 71, en la derecha: 68 70
comparacion (83)
    en la izquierda: 72 73 74 75 76 77, en la derecha: 64
constante (84)
    en la izquierda: 78 79, en la derecha: 62
constante_logica (85)
    en la izquierda: 80 81, en la derecha: 78
constante_entera (86)
    en la izquierda: 82, en la derecha: 79
identificador_use (87)
    en la izquierda: 83, en la derecha: 21 26 40 42 50 61 67
identificador_new (88)
    en la izquierda: 84, en la derecha: 15 16


Estado 0

    0 $accept: . programa $end

    TOK_MAIN  desplazar e ir al estado 1

    programa  ir al estado 2


Estado 1

    1 programa: TOK_MAIN . '{' iniciar declaraciones dec_vars funciones wrt_main sentencias final '}'

    '{'  desplazar e ir al estado 3


Estado 2

    0 $accept: programa . $end

    $end  desplazar e ir al estado 4


Estado 3

    1 programa: TOK_MAIN '{' . iniciar declaraciones dec_vars funciones wrt_main sentencias final '}'

    $default  reduce usando la regla 2 (iniciar)

    iniciar  ir al estado 5


Estado 4

    0 $accept: programa $end .

    $default  aceptar


Estado 5

    1 programa: TOK_MAIN '{' iniciar . declaraciones dec_vars funciones wrt_main sentencias final '}'

    TOK_INT      desplazar e ir al estado 6
    TOK_BOOLEAN  desplazar e ir al estado 7
    TOK_ARRAY    desplazar e ir al estado 8

    declaraciones  ir al estado 9
    declaracion    ir al estado 10
    clase          ir al estado 11
    clase_escalar  ir al estado 12
    tipo           ir al estado 13
    clase_vector   ir al estado 14


Estado 6

   12 tipo: TOK_INT .

    $default  reduce usando la regla 12 (tipo)


Estado 7

   13 tipo: TOK_BOOLEAN .

    $default  reduce usando la regla 13 (tipo)


Estado 8

   14 clase_vector: TOK_ARRAY . tipo '[' TOK_CONSTANTE_ENTERA ']'

    TOK_INT      desplazar e ir al estado 6
    TOK_BOOLEAN  desplazar e ir al estado 7

    tipo  ir al estado 15


Estado 9

    1 programa: TOK_MAIN '{' iniciar declaraciones . dec_vars funciones wrt_main sentencias final '}'

    $default  reduce usando la regla 4 (dec_vars)

    dec_vars  ir al estado 16


Estado 10

    6 declaraciones: declaracion .
    7              | declaracion . declaraciones

    TOK_INT      desplazar e ir al estado 6
    TOK_BOOLEAN  desplazar e ir al estado 7
    TOK_ARRAY    desplazar e ir al estado 8

    $default  reduce usando la regla 6 (declaraciones)

    declaraciones  ir al estado 17
    declaracion    ir al estado 10
    clase          ir al estado 11
    clase_escalar  ir al estado 12
    tipo           ir al estado 13
    clase_vector   ir al estado 14


Estado 11

    8 declaracion: clase . identificadores ';'

    TOK_IDENTIFICADOR  desplazar e ir al estado 18

    identificadores    ir al estado 19
    identificador_new  ir al estado 20


Estado 12

    9 clase: clase_escalar .

    $default  reduce usando la regla 9 (clase)


Estado 13

   11 clase_escalar: tipo .

    $default  reduce usando la regla 11 (clase_escalar)


Estado 14

   10 clase: clase_vector .

    $default  reduce usando la regla 10 (clase)


Estado 15

   14 clase_vector: TOK_ARRAY tipo . '[' TOK_CONSTANTE_ENTERA ']'

    '['  desplazar e ir al estado 21


Estado 16

    1 programa: TOK_MAIN '{' iniciar declaraciones dec_vars . funciones wrt_main sentencias final '}'

    TOK_FUNCTION  desplazar e ir al estado 22

    $default  reduce usando la regla 18 (funciones)

    funciones       ir al estado 23
    funcion         ir al estado 24
    fn_declaration  ir al estado 25
    fn_name         ir al estado 26


Estado 17

    7 declaraciones: declaracion declaraciones .

    $default  reduce usando la regla 7 (declaraciones)


Estado 18

   84 identificador_new: TOK_IDENTIFICADOR .

    $default  reduce usando la regla 84 (identificador_new)


Estado 19

    8 declaracion: clase identificadores . ';'

    ';'  desplazar e ir al estado 27


Estado 20

   15 identificadores: identificador_new .
   16                | identificador_new . ',' identificadores

    ','  desplazar e ir al estado 28

    $default  reduce usando la regla 15 (identificadores)


Estado 21

   14 clase_vector: TOK_ARRAY tipo '[' . TOK_CONSTANTE_ENTERA ']'

    TOK_CONSTANTE_ENTERA  desplazar e ir al estado 29


Estado 22

   21 fn_name: TOK_FUNCTION . tipo identificador_use

    TOK_INT      desplazar e ir al estado 6
    TOK_BOOLEAN  desplazar e ir al estado 7

    tipo  ir al estado 30


Estado 23

    1 programa: TOK_MAIN '{' iniciar declaraciones dec_vars funciones . wrt_main sentencias final '}'

    $default  reduce usando la regla 5 (wrt_main)

    wrt_main  ir al estado 31


Estado 24

   17 funciones: funcion . funciones

    TOK_FUNCTION  desplazar e ir al estado 22

    $default  reduce usando la regla 18 (funciones)

    funciones       ir al estado 32
    funcion         ir al estado 24
    fn_declaration  ir al estado 25
    fn_name         ir al estado 26


Estado 25

   19 funcion: fn_declaration . sentencias '}'

    TOK_IF             desplazar e ir al estado 33
    TOK_WHILE          desplazar e ir al estado 34
    TOK_SCANF          desplazar e ir al estado 35
    TOK_PRINTF         desplazar e ir al estado 36
    TOK_RETURN         desplazar e ir al estado 37
    TOK_IDENTIFICADOR  desplazar e ir al estado 38

    sentencias         ir al estado 39
    sentencia          ir al estado 40
    sentencia_simple   ir al estado 41
    bloque             ir al estado 42
    asignacion         ir al estado 43
    elemento_vector    ir al estado 44
    condicional        ir al estado 45
    if_sentencias      ir al estado 46
    if_exp             ir al estado 47
    bucle              ir al estado 48
    bucle_exp          ir al estado 49
    bucle_tok          ir al estado 50
    lectura            ir al estado 51
    escritura          ir al estado 52
    retorno_funcion    ir al estado 53
    identificador_use  ir al estado 54


Estado 26

   20 fn_declaration: fn_name . '(' parametros_funcion ')' '{' declaraciones_funcion

    '('  desplazar e ir al estado 55


Estado 27

    8 declaracion: clase identificadores ';' .

    $default  reduce usando la regla 8 (declaracion)


Estado 28

   16 identificadores: identificador_new ',' . identificadores

    TOK_IDENTIFICADOR  desplazar e ir al estado 18

    identificadores    ir al estado 56
    identificador_new  ir al estado 20


Estado 29

   14 clase_vector: TOK_ARRAY tipo '[' TOK_CONSTANTE_ENTERA . ']'

    ']'  desplazar e ir al estado 57


Estado 30

   21 fn_name: TOK_FUNCTION tipo . identificador_use

    TOK_IDENTIFICADOR  desplazar e ir al estado 38

    identificador_use  ir al estado 58


Estado 31

    1 programa: TOK_MAIN '{' iniciar declaraciones dec_vars funciones wrt_main . sentencias final '}'

    TOK_IF             desplazar e ir al estado 33
    TOK_WHILE          desplazar e ir al estado 34
    TOK_SCANF          desplazar e ir al estado 35
    TOK_PRINTF         desplazar e ir al estado 36
    TOK_RETURN         desplazar e ir al estado 37
    TOK_IDENTIFICADOR  desplazar e ir al estado 38

    sentencias         ir al estado 59
    sentencia          ir al estado 40
    sentencia_simple   ir al estado 41
    bloque             ir al estado 42
    asignacion         ir al estado 43
    elemento_vector    ir al estado 44
    condicional        ir al estado 45
    if_sentencias      ir al estado 46
    if_exp             ir al estado 47
    bucle              ir al estado 48
    bucle_exp          ir al estado 49
    bucle_tok          ir al estado 50
    lectura            ir al estado 51
    escritura          ir al estado 52
    retorno_funcion    ir al estado 53
    identificador_use  ir al estado 54


Estado 32

   17 funciones: funcion funciones .

    $default  reduce usando la regla 17 (funciones)


Estado 33

   46 if_exp: TOK_IF . '(' exp ')' '{'

    '('  desplazar e ir al estado 60


Estado 34

   49 bucle_tok: TOK_WHILE .

    $default  reduce usando la regla 49 (bucle_tok)


Estado 35

   50 lectura: TOK_SCANF . identificador_use

    TOK_IDENTIFICADOR  desplazar e ir al estado 38

    identificador_use  ir al estado 61


Estado 36

   51 escritura: TOK_PRINTF . exp

    TOK_IDENTIFICADOR     desplazar e ir al estado 38
    TOK_CONSTANTE_ENTERA  desplazar e ir al estado 62
    TOK_TRUE              desplazar e ir al estado 63
    TOK_FALSE             desplazar e ir al estado 64
    '-'                   desplazar e ir al estado 65
    '!'                   desplazar e ir al estado 66
    '('                   desplazar e ir al estado 67

    elemento_vector    ir al estado 68
    exp                ir al estado 69
    llamada_funcion    ir al estado 70
    constante          ir al estado 71
    constante_logica   ir al estado 72
    constante_entera   ir al estado 73
    identificador_use  ir al estado 74


Estado 37

   52 retorno_funcion: TOK_RETURN . exp

    TOK_IDENTIFICADOR     desplazar e ir al estado 38
    TOK_CONSTANTE_ENTERA  desplazar e ir al estado 62
    TOK_TRUE              desplazar e ir al estado 63
    TOK_FALSE             desplazar e ir al estado 64
    '-'                   desplazar e ir al estado 65
    '!'                   desplazar e ir al estado 66
    '('                   desplazar e ir al estado 67

    elemento_vector    ir al estado 68
    exp                ir al estado 75
    llamada_funcion    ir al estado 70
    constante          ir al estado 71
    constante_logica   ir al estado 72
    constante_entera   ir al estado 73
    identificador_use  ir al estado 74


Estado 38

   83 identificador_use: TOK_IDENTIFICADOR .

    $default  reduce usando la regla 83 (identificador_use)


Estado 39

   19 funcion: fn_declaration sentencias . '}'

    '}'  desplazar e ir al estado 76


Estado 40

   30 sentencias: sentencia .
   31           | sentencia . sentencias

    TOK_IF             desplazar e ir al estado 33
    TOK_WHILE          desplazar e ir al estado 34
    TOK_SCANF          desplazar e ir al estado 35
    TOK_PRINTF         desplazar e ir al estado 36
    TOK_RETURN         desplazar e ir al estado 37
    TOK_IDENTIFICADOR  desplazar e ir al estado 38

    $default  reduce usando la regla 30 (sentencias)

    sentencias         ir al estado 77
    sentencia          ir al estado 40
    sentencia_simple   ir al estado 41
    bloque             ir al estado 42
    asignacion         ir al estado 43
    elemento_vector    ir al estado 44
    condicional        ir al estado 45
    if_sentencias      ir al estado 46
    if_exp             ir al estado 47
    bucle              ir al estado 48
    bucle_exp          ir al estado 49
    bucle_tok          ir al estado 50
    lectura            ir al estado 51
    escritura          ir al estado 52
    retorno_funcion    ir al estado 53
    identificador_use  ir al estado 54


Estado 41

   32 sentencia: sentencia_simple . ';'

    ';'  desplazar e ir al estado 78


Estado 42

   33 sentencia: bloque .

    $default  reduce usando la regla 33 (sentencia)


Estado 43

   34 sentencia_simple: asignacion .

    $default  reduce usando la regla 34 (sentencia_simple)


Estado 44

   41 asignacion: elemento_vector . '=' exp

    '='  desplazar e ir al estado 79


Estado 45

   38 bloque: condicional .

    $default  reduce usando la regla 38 (bloque)


Estado 46

   43 condicional: if_sentencias .
   44            | if_sentencias . TOK_ELSE '{' sentencias '}'

    TOK_ELSE  desplazar e ir al estado 80

    $default  reduce usando la regla 43 (condicional)


Estado 47

   45 if_sentencias: if_exp . sentencias '}'

    TOK_IF             desplazar e ir al estado 33
    TOK_WHILE          desplazar e ir al estado 34
    TOK_SCANF          desplazar e ir al estado 35
    TOK_PRINTF         desplazar e ir al estado 36
    TOK_RETURN         desplazar e ir al estado 37
    TOK_IDENTIFICADOR  desplazar e ir al estado 38

    sentencias         ir al estado 81
    sentencia          ir al estado 40
    sentencia_simple   ir al estado 41
    bloque             ir al estado 42
    asignacion         ir al estado 43
    elemento_vector    ir al estado 44
    condicional        ir al estado 45
    if_sentencias      ir al estado 46
    if_exp             ir al estado 47
    bucle              ir al estado 48
    bucle_exp          ir al estado 49
    bucle_tok          ir al estado 50
    lectura            ir al estado 51
    escritura          ir al estado 52
    retorno_funcion    ir al estado 53
    identificador_use  ir al estado 54


Estado 48

   39 bloque: bucle .

    $default  reduce usando la regla 39 (bloque)


Estado 49

   47 bucle: bucle_exp . sentencias '}'

    TOK_IF             desplazar e ir al estado 33
    TOK_WHILE          desplazar e ir al estado 34
    TOK_SCANF          desplazar e ir al estado 35
    TOK_PRINTF         desplazar e ir al estado 36
    TOK_RETURN         desplazar e ir al estado 37
    TOK_IDENTIFICADOR  desplazar e ir al estado 38

    sentencias         ir al estado 82
    sentencia          ir al estado 40
    sentencia_simple   ir al estado 41
    bloque             ir al estado 42
    asignacion         ir al estado 43
    elemento_vector    ir al estado 44
    condicional        ir al estado 45
    if_sentencias      ir al estado 46
    if_exp             ir al estado 47
    bucle              ir al estado 48
    bucle_exp          ir al estado 49
    bucle_tok          ir al estado 50
    lectura            ir al estado 51
    escritura          ir al estado 52
    retorno_funcion    ir al estado 53
    identificador_use  ir al estado 54


Estado 50

   48 bucle_exp: bucle_tok . '(' exp ')' '{'

    '('  desplazar e ir al estado 83


Estado 51

   35 sentencia_simple: lectura .

    $default  reduce usando la regla 35 (sentencia_simple)


Estado 52

   36 sentencia_simple: escritura .

    $default  reduce usando la regla 36 (sentencia_simple)


Estado 53

   37 sentencia_simple: retorno_funcion .

    $default  reduce usando la regla 37 (sentencia_simple)


Estado 54

   40 asignacion: identificador_use . '=' exp
   42 elemento_vector: identificador_use . '[' exp ']'

    '['  desplazar e ir al estado 84
    '='  desplazar e ir al estado 85


Estado 55

   20 fn_declaration: fn_name '(' . parametros_funcion ')' '{' declaraciones_funcion

    TOK_INT      desplazar e ir al estado 6
    TOK_BOOLEAN  desplazar e ir al estado 7

    $default  reduce usando la regla 23 (parametros_funcion)

    tipo                ir al estado 86
    parametros_funcion  ir al estado 87
    parametro_funcion   ir al estado 88


Estado 56

   16 identificadores: identificador_new ',' identificadores .

    $default  reduce usando la regla 16 (identificadores)


Estado 57

   14 clase_vector: TOK_ARRAY tipo '[' TOK_CONSTANTE_ENTERA ']' .

    $default  reduce usando la regla 14 (clase_vector)


Estado 58

   21 fn_name: TOK_FUNCTION tipo identificador_use .

    $default  reduce usando la regla 21 (fn_name)


Estado 59

    1 programa: TOK_MAIN '{' iniciar declaraciones dec_vars funciones wrt_main sentencias . final '}'

    $default  reduce usando la regla 3 (final)

    final  ir al estado 89


Estado 60

   46 if_exp: TOK_IF '(' . exp ')' '{'

    TOK_IDENTIFICADOR     desplazar e ir al estado 38
    TOK_CONSTANTE_ENTERA  desplazar e ir al estado 62
    TOK_TRUE              desplazar e ir al estado 63
    TOK_FALSE             desplazar e ir al estado 64
    '-'                   desplazar e ir al estado 65
    '!'                   desplazar e ir al estado 66
    '('                   desplazar e ir al estado 67

    elemento_vector    ir al estado 68
    exp                ir al estado 90
    llamada_funcion    ir al estado 70
    constante          ir al estado 71
    constante_logica   ir al estado 72
    constante_entera   ir al estado 73
    identificador_use  ir al estado 74


Estado 61

   50 lectura: TOK_SCANF identificador_use .

    $default  reduce usando la regla 50 (lectura)


Estado 62

   82 constante_entera: TOK_CONSTANTE_ENTERA .

    $default  reduce usando la regla 82 (constante_entera)


Estado 63

   80 constante_logica: TOK_TRUE .

    $default  reduce usando la regla 80 (constante_logica)


Estado 64

   81 constante_logica: TOK_FALSE .

    $default  reduce usando la regla 81 (constante_logica)


Estado 65

   57 exp: '-' . exp

    TOK_IDENTIFICADOR     desplazar e ir al estado 38
    TOK_CONSTANTE_ENTERA  desplazar e ir al estado 62
    TOK_TRUE              desplazar e ir al estado 63
    TOK_FALSE             desplazar e ir al estado 64
    '-'                   desplazar e ir al estado 65
    '!'                   desplazar e ir al estado 66
    '('                   desplazar e ir al estado 67

    elemento_vector    ir al estado 68
    exp                ir al estado 91
    llamada_funcion    ir al estado 70
    constante          ir al estado 71
    constante_logica   ir al estado 72
    constante_entera   ir al estado 73
    identificador_use  ir al estado 74


Estado 66

   60 exp: '!' . exp

    TOK_IDENTIFICADOR     desplazar e ir al estado 38
    TOK_CONSTANTE_ENTERA  desplazar e ir al estado 62
    TOK_TRUE              desplazar e ir al estado 63
    TOK_FALSE             desplazar e ir al estado 64
    '-'                   desplazar e ir al estado 65
    '!'                   desplazar e ir al estado 66
    '('                   desplazar e ir al estado 67

    elemento_vector    ir al estado 68
    exp                ir al estado 92
    llamada_funcion    ir al estado 70
    constante          ir al estado 71
    constante_logica   ir al estado 72
    constante_entera   ir al estado 73
    identificador_use  ir al estado 74


Estado 67

   63 exp: '(' . exp ')'
   64    | '(' . comparacion ')'

    TOK_IDENTIFICADOR     desplazar e ir al estado 38
    TOK_CONSTANTE_ENTERA  desplazar e ir al estado 62
    TOK_TRUE              desplazar e ir al estado 63
    TOK_FALSE             desplazar e ir al estado 64
    '-'                   desplazar e ir al estado 65
    '!'                   desplazar e ir al estado 66
    '('                   desplazar e ir al estado 67

    elemento_vector    ir al estado 68
    exp                ir al estado 93
    llamada_funcion    ir al estado 70
    comparacion        ir al estado 94
    constante          ir al estado 71
    constante_logica   ir al estado 72
    constante_entera   ir al estado 73
    identificador_use  ir al estado 74


Estado 68

   65 exp: elemento_vector .

    $default  reduce usando la regla 65 (exp)


Estado 69

   51 escritura: TOK_PRINTF exp .
   53 exp: exp . '+' exp
   54    | exp . '-' exp
   55    | exp . '/' exp
   56    | exp . '*' exp
   58    | exp . TOK_AND exp
   59    | exp . TOK_OR exp

    TOK_AND  desplazar e ir al estado 95
    TOK_OR   desplazar e ir al estado 96
    '+'      desplazar e ir al estado 97
    '-'      desplazar e ir al estado 98
    '*'      desplazar e ir al estado 99
    '/'      desplazar e ir al estado 100

    $default  reduce usando la regla 51 (escritura)


Estado 70

   66 exp: llamada_funcion . '(' lista_expresiones ')'

    '('  desplazar e ir al estado 101


Estado 71

   62 exp: constante .

    $default  reduce usando la regla 62 (exp)


Estado 72

   78 constante: constante_logica .

    $default  reduce usando la regla 78 (constante)


Estado 73

   79 constante: constante_entera .

    $default  reduce usando la regla 79 (constante)


Estado 74

   42 elemento_vector: identificador_use . '[' exp ']'
   61 exp: identificador_use .
   67 llamada_funcion: identificador_use .

    '['  desplazar e ir al estado 84

    '('       reduce usando la regla 67 (llamada_funcion)
    $default  reduce usando la regla 61 (exp)


Estado 75

   52 retorno_funcion: TOK_RETURN exp .
   53 exp: exp . '+' exp
   54    | exp . '-' exp
   55    | exp . '/' exp
   56    | exp . '*' exp
   58    | exp . TOK_AND exp
   59    | exp . TOK_OR exp

    TOK_AND  desplazar e ir al estado 95
    TOK_OR   desplazar e ir al estado 96
    '+'      desplazar e ir al estado 97
    '-'      desplazar e ir al estado 98
    '*'      desplazar e ir al estado 99
    '/'      desplazar e ir al estado 100

    $default  reduce usando la regla 52 (retorno_funcion)


Estado 76

   19 funcion: fn_declaration sentencias '}' .

    $default  reduce usando la regla 19 (funcion)


Estado 77

   31 sentencias: sentencia sentencias .

    $default  reduce usando la regla 31 (sentencias)


Estado 78

   32 sentencia: sentencia_simple ';' .

    $default  reduce usando la regla 32 (sentencia)


Estado 79

   41 asignacion: elemento_vector '=' . exp

    TOK_IDENTIFICADOR     desplazar e ir al estado 38
    TOK_CONSTANTE_ENTERA  desplazar e ir al estado 62
    TOK_TRUE              desplazar e ir al estado 63
    TOK_FALSE             desplazar e ir al estado 64
    '-'                   desplazar e ir al estado 65
    '!'                   desplazar e ir al estado 66
    '('                   desplazar e ir al estado 67

    elemento_vector    ir al estado 68
    exp                ir al estado 102
    llamada_funcion    ir al estado 70
    constante          ir al estado 71
    constante_logica   ir al estado 72
    constante_entera   ir al estado 73
    identificador_use  ir al estado 74


Estado 80

   44 condicional: if_sentencias TOK_ELSE . '{' sentencias '}'

    '{'  desplazar e ir al estado 103


Estado 81

   45 if_sentencias: if_exp sentencias . '}'

    '}'  desplazar e ir al estado 104


Estado 82

   47 bucle: bucle_exp sentencias . '}'

    '}'  desplazar e ir al estado 105


Estado 83

   48 bucle_exp: bucle_tok '(' . exp ')' '{'

    TOK_IDENTIFICADOR     desplazar e ir al estado 38
    TOK_CONSTANTE_ENTERA  desplazar e ir al estado 62
    TOK_TRUE              desplazar e ir al estado 63
    TOK_FALSE             desplazar e ir al estado 64
    '-'                   desplazar e ir al estado 65
    '!'                   desplazar e ir al estado 66
    '('                   desplazar e ir al estado 67

    elemento_vector    ir al estado 68
    exp                ir al estado 106
    llamada_funcion    ir al estado 70
    constante          ir al estado 71
    constante_logica   ir al estado 72
    constante_entera   ir al estado 73
    identificador_use  ir al estado 74


Estado 84

   42 elemento_vector: identificador_use '[' . exp ']'

    TOK_IDENTIFICADOR     desplazar e ir al estado 38
    TOK_CONSTANTE_ENTERA  desplazar e ir al estado 62
    TOK_TRUE              desplazar e ir al estado 63
    TOK_FALSE             desplazar e ir al estado 64
    '-'                   desplazar e ir al estado 65
    '!'                   desplazar e ir al estado 66
    '('                   desplazar e ir al estado 67

    elemento_vector    ir al estado 68
    exp                ir al estado 107
    llamada_funcion    ir al estado 70
    constante          ir al estado 71
    constante_logica   ir al estado 72
    constante_entera   ir al estado 73
    identificador_use  ir al estado 74


Estado 85

   40 asignacion: identificador_use '=' . exp

    TOK_IDENTIFICADOR     desplazar e ir al estado 38
    TOK_CONSTANTE_ENTERA  desplazar e ir al estado 62
    TOK_TRUE              desplazar e ir al estado 63
    TOK_FALSE             desplazar e ir al estado 64
    '-'                   desplazar e ir al estado 65
    '!'                   desplazar e ir al estado 66
    '('                   desplazar e ir al estado 67

    elemento_vector    ir al estado 68
    exp                ir al estado 108
    llamada_funcion    ir al estado 70
    constante          ir al estado 71
    constante_logica   ir al estado 72
    constante_entera   ir al estado 73
    identificador_use  ir al estado 74


Estado 86

   27 parametro_funcion: tipo . idpf

    TOK_IDENTIFICADOR  desplazar e ir al estado 38

    idpf               ir al estado 109
    identificador_use  ir al estado 110


Estado 87

   20 fn_declaration: fn_name '(' parametros_funcion . ')' '{' declaraciones_funcion

    ')'  desplazar e ir al estado 111


Estado 88

   22 parametros_funcion: parametro_funcion . resto_parametros_funcion

    ';'  desplazar e ir al estado 112

    $default  reduce usando la regla 25 (resto_parametros_funcion)

    resto_parametros_funcion  ir al estado 113


Estado 89

    1 programa: TOK_MAIN '{' iniciar declaraciones dec_vars funciones wrt_main sentencias final . '}'

    '}'  desplazar e ir al estado 114


Estado 90

   46 if_exp: TOK_IF '(' exp . ')' '{'
   53 exp: exp . '+' exp
   54    | exp . '-' exp
   55    | exp . '/' exp
   56    | exp . '*' exp
   58    | exp . TOK_AND exp
   59    | exp . TOK_OR exp

    TOK_AND  desplazar e ir al estado 95
    TOK_OR   desplazar e ir al estado 96
    '+'      desplazar e ir al estado 97
    '-'      desplazar e ir al estado 98
    '*'      desplazar e ir al estado 99
    '/'      desplazar e ir al estado 100
    ')'      desplazar e ir al estado 115


Estado 91

   53 exp: exp . '+' exp
   54    | exp . '-' exp
   55    | exp . '/' exp
   56    | exp . '*' exp
   57    | '-' exp .
   58    | exp . TOK_AND exp
   59    | exp . TOK_OR exp

    $default  reduce usando la regla 57 (exp)


Estado 92

   53 exp: exp . '+' exp
   54    | exp . '-' exp
   55    | exp . '/' exp
   56    | exp . '*' exp
   58    | exp . TOK_AND exp
   59    | exp . TOK_OR exp
   60    | '!' exp .

    $default  reduce usando la regla 60 (exp)


Estado 93

   53 exp: exp . '+' exp
   54    | exp . '-' exp
   55    | exp . '/' exp
   56    | exp . '*' exp
   58    | exp . TOK_AND exp
   59    | exp . TOK_OR exp
   63    | '(' exp . ')'
   72 comparacion: exp . TOK_IGUAL exp
   73            | exp . TOK_DISTINTO exp
   74            | exp . TOK_MENORIGUAL exp
   75            | exp . TOK_MAYORIGUAL exp
   76            | exp . '<' exp
   77            | exp . '>' exp
